Version 3.9.32
- Improved handling of hub addresses in Spin objects
- Fixed some errors in C propeller2.h file
- Fixed lmm=trace
- Fixed C99 for loop declarations

Version 3.9.31
- Fixed an off-by-one error in SELECT CASE
- Allow slightly longer functions to be inlined (improves pintoggle)
- Fixed getcnt() in BASIC
- Recognize ! as well as # as a suffix to indicate a floating point variable
- Fixed some BASIC parsing problems with empty IF/ELSE conditions and empty subroutines.
- Fixed a problem with printing long strings
- Changed format of error messages to "filename:line: error: stuff" to match the preprocessor's error format and make parsing easier

Version 3.9.30
- Fixed some floating point parsing issues
- Added some missing C stdio functions
- In listing files update the COG address for RES statements
- Reduced use of COG memory in P2
- Fixed some bad formatting in __builtin_printf
- Fixed a bug in BASIC parsing of empty lines
- Fixed return values of some BASIC builtin functions
- Fixed a garbage collector hang
- Added "out of memory" error messages
- Fixed BASIC global multi-dimensional array declarations

Version 3.9.29
- Implemented concrete classes in BASIC
- Implemented function templates in BASIC
- Fixed BASIC new() operator to use managed allocation
- Implemented STR$ for BASIC
- Fixed typos in P2 _clkset function
- Fixed a problem with @ operator applied to labels in Spin code outside of DAT section
- Changed listing file output slightly to force labels to be output at the correct addresses
- Changed order of evaluation of assignments to more closely match original Spin
- Changed result of division by 0 to match Spin

Version 3.9.28
- Only use jump table for switch / select if the density is greater than 1/2
- Do small immediate optimizations even for P2 (it was accidentally P1 only)
- Add error if nop instruction is conditionalized
- Improved output formatting code, particularly for floating point
- Improved error messages for bad addressing modes