@@ -3,6 +3,7 @@ Version 3.9.32
 - Fixed some errors in C propeller2.h file
 - Fixed lmm=trace
 - Fixed C99 for loop declarations
+- Allow selection of P2 silicon version via "-2a" or "-2b" flags; for now just plain "-2" selects rev A (original silicon)
 
 Version 3.9.31
 - Fixed an off-by-one error in SELECT CASE
